# lsv

./: Cargo.toml  IMPLEMENTATION_NOTES.md  README.md
docs/: agents.md
examples/config/: init.lua
src/: app.rs  input.rs
src/app/: preview_ctrl.rs  state.rs
src/ui/: image_preview.rs  mod.rs  preview.rs
